--- a/Resources/Private/Editor/Repeatable/style.module.css
+++ b/Resources/Private/Editor/Repeatable/style.module.css
@@ -17,6 +17,48 @@
     margin-top: 10px;
 }
 
+.preview.preview {
+    height: var(--spacing-GoldenUnit);
+    display: block;
+    background: none;
+    max-width: 100%;
+    margin: 0;
+    position: relative;
+    width: 100%;
+
+    figure {
+        height: var(--spacing-GoldenUnit);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        overflow: hidden;
+        margin: 0;
+        padding: 0;
+    }
+
+    img {
+        max-width: none;
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        margin: 0;
+        padding: 0;
+    }
+}
+
+.label.label {
+    display: block;
+    line-height: var(--spacing-GoldenUnit);
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    background-color: transparent;
+    max-width: none;
+    width: 100%;
+}
+
 .buttons {
     display: flex;
     justify-content: flex-end;
@@ -31,6 +73,7 @@
         justify-content: center;
         height: var(--spacing-GoldenUnit);
         min-width: var(--spacing-GoldenUnit);
+        max-width: var(--spacing-GoldenUnit);
         background-color: var(--colors-ContrastNeutral);
     }
 
@@ -66,7 +109,7 @@
     column-gap: 2px;
     margin-bottom: 10px;
 
-    & label {
+    label {
         position: absolute;
         width: 1px;
         height: 1px;
@@ -78,7 +121,7 @@
         border-width: 0;
     }
 
-    & .group {
+    .group {
         flex: 1;
         max-width: 283px;
     }
@@ -99,7 +142,7 @@
     font-size: var(--fontSize-Base);
     gap: 2px;
 
-    & > * {
+    > * {
         display: flex;
         align-items: center;
         justify-content: center;
