Fix: Show item on sort

--- a/Resources/Private/Editor/Repeatable/style.module.css
+++ b/Resources/Private/Editor/Repeatable/style.module.css
@@ -48,6 +48,10 @@
     }
 }
 
+.sortableHelper {
+    z-index: 9999;
+}
+
 .label.label {
     display: block;
     line-height: var(--spacing-GoldenUnit);
